resloved check style issues